--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.7",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
